--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -2580,7 +2580,16 @@ div.rating-critic {
   top: 5px;
   left: 5px;
 }
-
+.label-eps {
+top: 30px;
+    left: 5px;
+    position: absolute;
+    padding: 2px 4px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #00e5ff;
+    font-size: 12px;
+    z-index: 1;
+}
 .label-rating {
   top: 5px;
   right: 5px;
