--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -76,6 +76,12 @@
    font-size: 15px;
     margin: 0.2em 0 1px !important;
 }
+.surah-navigation {
+  display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-bottom: 10px;
+}
 .juzAyatType {font-size: 12px;}
 .quran-wrapper {
     padding: 0px 13px 20px 13px;
