--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -68,7 +68,7 @@
 .list-group-item {
 border: 1px solid rgb(0 0 0 / 0%)
 }
-.list-group-item:first-child:hover {
+.list-group-item:hover {
     box-shadow: inset 0px 0px 20px 20px #3eaf6b;
 }
 .suraNames {
