--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -95,7 +95,15 @@ border: 1px solid rgb(0 0 0 / 0%)
     background: rgb(79 149 44);
     background: linear-gradient(0deg, rgb(50 149 44 / 0%) 0%, rgb(19 107 22 / 5%) 50%, rgb(16 175 22 / 19%) 100%);
 }
-
+.typeAyat2 {
+         float: right;
+        /* width: 43vh; */
+        font-size: 12px;
+        margin-top: -4px;
+        color: grey;
+        /* text-align: right; */
+    
+}
 .descriptQuran {display: none;}
 .terjemahSurah {margin: 1em 0;}
 
