--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -2232,14 +2232,14 @@ color: #0088ff;
   .site-links li:first-child a {
     padding-left: 10px;
   }
+ 
   #counter {
-    position: relative;
-    right: auto;
-    bottom: auto;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px 15px 50px;
-    text-align: center;
-    clear: both;
+   position: fixed;
+   right: 15px;
+   bottom: 15px;
+   background-color: rgba(0, 0, 0, 0.5);
+   padding: 7px 15px;
+   clear: both;
   }
   #counter .globe {
     position: relative;
